--- a/src/UI/Components/BasicInfo/BasicInfoV5/BasicInfoV5.css
+++ b/src/UI/Components/BasicInfo/BasicInfoV5/BasicInfoV5.css
@@ -176,9 +176,11 @@
 	top: 130px;
 	right: -15px;
 	width: 100%;
-}
-#BasicInfoV5 .large .extra {
-	padding-right: 10px;
+	padding-right: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: right;
+	white-space: nowrap;	
 }
 #BasicInfoV5 .buttons {
 	position: absolute;
